Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
Python reproducer:
import pyarrow as pa import pyarrow.parquet as pq import pyarrow.dataset as ds path = "test_dataset" table = pa.table({'part': ['a', 'a', 'b', 'b'], 'col': [1, 2, 3, 4]}) pq.write_to_dataset(table, str(path), partition_cols=["part"])
gives
In [38]: ds.dataset(str(path), partitioning="hive").to_table().num_rows Out[38]: 4 In [39]: ds.dataset(str(path), partitioning="hive").to_table(columns=["part"]).num_rows Out[39]: 0
The schema correctly only includes the "part" column, but there are no rows.
cc bkietz
Attachments
Issue Links
- links to