ARROW-8729: [C++][Dataset] Ensure non-empty batches when only virtual columns are projected

This bug is inherited from `parquet::arrow::RowGroupRecordBatchReader`, which yielded empty record batches when no columns were projected because no field readers were available from which to derive batch size. I've added logic to get usable batch sizes from file metadata in the empty columns case

Closes #7534 from bkietz/8729-empty-virtual-columns

Authored-by: Benjamin Kietzman <bengilgit@gmail.com>
Signed-off-by: Wes McKinney <wesm@apache.org>